[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/FloatingText.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 1
outline_color = Color( 1, 1, 1, 0.588235 )
font_data = ExtResource( 2 )

[node name="FloatingText" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "0000"

[node name="FloatTween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="FloatTween" to="." method="_on_FloatTween_tween_all_completed"]
